Fix styling on small screens

--- a/cesta-do-jeruzalema/src/app/app.component.less
+++ b/cesta-do-jeruzalema/src/app/app.component.less
@@ -29,20 +29,32 @@
 
 .main-content-wrapper {
     margin-top: @header-height;
+    @media only screen and (max-width: 600px) {
+
+        margin-top: 56px;
+
+    }
 }
 
 .content {
     height: calc(100vh - @header-height);
+    @media only screen and (max-width: 600px) {
+
+        height: calc(100vh - 56px) ;
+
+    }
 }
 
 .footer {
-    height: 50px;
+    min-height: 50px;
     background: #3f51b5;
     color: white;
     display: flex;
     align-content: center;
     justify-content: center;
-
+    p {
+        margin: 5px 10px;
+    }
     &--link {
         color: white;
     }
